# HoribaControl

./: .gitignore  config.py  pyproject.toml.txt  requirements.txt
HoribaControl_v0.1-dev/HoribaControl_v0.1-dev/: CHANGELOG.md  README.md  install_windows.bat  pyproject.toml
HoribaControl_v0.1-dev/HoribaControl_v0.1-dev/config/: default.yaml
HoribaControl_v0.1-dev/HoribaControl_v0.1-dev/src/horibacontrol/: application.py  cli.py  logging_setup.py
HoribaControl_v0.1-dev/HoribaControl_v0.1-dev/src/horibacontrol/core/: command_queue.py  state_machine.py
HoribaControl_v0.1-dev/HoribaControl_v0.1-dev/src/horibacontrol/domain/: commands.py  events.py  models.py
HoribaControl_v0.1-dev/HoribaControl_v0.1-dev/src/horibacontrol/hardware/: backend.py  simulation.py
HoribaControl_v0.1-dev/HoribaControl_v0.1-dev/src/horibacontrol/services/: spectrum_io.py
HoribaControl_v0.1-dev/HoribaControl_v0.1-dev/tests/: test_event_bus.py
HoribaControl_v0.2-ezspec/HoribaControl_v0.2-ezspec/: .gitignore  CHANGELOG.md  README.md  diagnose_hardware.bat  hardware_smoke_532nm.bat  install_windows.bat  main.py  pyproject.toml  run_demo.bat
HoribaControl_v1.1_NumPy2/HoribaControl/: .gitignore  CHANGELOG.md  (+3 more)
MicroHR_Control_Python_v1.0/MicroHR_Control_Python/: README.md  install_windows.bat  pyproject.toml  requirements.txt  run_gui.py
MicroHR_Control_Python_v1.0/MicroHR_Control_Python/src/microhr_control/: async_runner.py  backend.py  cli.py  gui.py  logging_utils.py
MicroHR_Control_Python_v1.0/MicroHR_Control_Python/tests/: test_simulation.py
controllers/: application_controller.py
(+25 files in other folders)
